--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>TEST</title>
   </head>
   <body>
-    <a href="valerio/index.html">VALERIO</a>
+    <a href="Valerio/index.html">VALERIO</a>
 
     <style>
       body {
