--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <a href="Valerio/index.html">VALERIO</a>
-    <a href="SINEMA/index.html">SINEMA</a>
+    <a href="Movieapp/index.html">React-movie-app</a>
 
     <style>
       body {
