--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
     <a href="Valerio/index.html">VALERIO</a>
     <a href="Movieapp/index.html">React-movie-app</a>
+    <a href="build/index.html">React-test</a>
 
     <style>
       body {
