--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <a href="Valerio/index.html">VALERIO</a>
     <a href="Movieapp/index.html">React-movie-app</a>
-    <a href="build/index.html">React-test</a>
+    <a href="ProgettoMappa/index.html">Progetto-Mappa</a>
 
     <style>
       body {
